# PyAPNs2

./: .gitignore  README.md  pyproject.toml  setup.py
apns2/: client.py  credentials.py  errors.py
test/: test_client.py  test_credentials.py
